--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,5 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+# Allure dir's manual run
+allure-results
