--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -1,4 +1,4 @@
-baseUriDev = https://subscribe-rf-front-test.xn--d1aiavecq8cxb.xn--p1ai/
+baseUriDev = https://subscribe-rf-front-test.forward.lc/
 
 
 
